--- a/assets/styles/mobile.css
+++ b/assets/styles/mobile.css
@@ -10,20 +10,21 @@
     border-top-right-radius: 0px;
     float: none;
     width: 100vw;
-    /* padding-top: 0px; */
+    padding-top: 25px;
 }
 
-/* #primary #circle {
-    width: 150px;
-    height: 150px;
-} */
+#primary #circle {
+    width: 170px;
+    height: 170px;
+}
+
+#primary h1 {
+    font-size: 6.5rem;
+    margin-top: 0px;
+}
 
 #summary {
     float: none;
     width: 100vw;
 }
 
-.attribution {
-    position: fixed;
-    bottom: 0px;
-}
